@@ -15,13 +15,14 @@ import org.checkerframework.checker.index.qual.NonNegative;
 import com.virtuslab.branchlayout.api.BranchLayout;
 import com.virtuslab.branchlayout.api.BranchLayoutEntry;
 import com.virtuslab.branchlayout.api.BranchLayoutException;
-import com.virtuslab.branchlayout.api.IBranchLayoutEntry;
 import com.virtuslab.branchlayout.api.readwrite.IBranchLayoutReader;
+import com.virtuslab.qual.guieffect.UIThreadUnsafe;
 
 @ExtensionMethod(BranchLayoutFileUtils.class)
 @CustomLog
 public class BranchLayoutFileReader implements IBranchLayoutReader {
 
+  @UIThreadUnsafe
   @Override
   public BranchLayout read(Path path) throws BranchLayoutException {
     boolean isBranchLayoutPresent = Files.isRegularFile(path);
@@ -34,11 +35,11 @@ public class BranchLayoutFileReader implements IBranchLayoutReader {
     LOG.debug(() -> "Entering: Reading branch layout from ${path} with indent character ASCII " +
         "code = ${(int)indentSpec.getIndentCharacter()} and indent width = ${indentSpec.getIndentWidth()}");
 
-    List<String> linesWithoutBlank = lines.reject(line -> line.trim().isEmpty());
+    List<String> linesWithoutBlank = lines.reject(String::isBlank);
 
     LOG.debug(() -> "${lines.length()} line(s) found");
 
-    List<IBranchLayoutEntry> roots = List.empty();
+    List<BranchLayoutEntry> roots = List.empty();
     if (!linesWithoutBlank.isEmpty()) {
       Array<Tuple2<Integer, Integer>> lineIndexToIndentLevelAndParentLineIndex = parseToArrayRepresentation(path, indentSpec,
           lines);
@@ -63,7 +64,7 @@ public class BranchLayoutFileReader implements IBranchLayoutReader {
    * @return list of entries with recursively built lists of children
    */
   @SuppressWarnings("index:argument")
-  private List<IBranchLayoutEntry> buildEntriesStructure(
+  private List<BranchLayoutEntry> buildEntriesStructure(
       List<String> lines,
       Array<Tuple2<Integer, Integer>> lineIndexToParentLineIndex,
       @GTENegativeOne int parentLineIndex) {
@@ -80,7 +81,7 @@ public class BranchLayoutFileReader implements IBranchLayoutReader {
    * Parses line to {@link BranchLayoutEntry#BranchLayoutEntry} arguments and creates an
    * entry with the specified {@code children}.
    */
-  private IBranchLayoutEntry createEntry(String line, List<IBranchLayoutEntry> children) {
+  private BranchLayoutEntry createEntry(String line, List<BranchLayoutEntry> children) {
     LOG.debug(() -> "Entering: line = '${line}', children = ${children}");
 
     String trimmedLine = line.trim();
@@ -107,7 +108,7 @@ public class BranchLayoutFileReader implements IBranchLayoutReader {
   private Array<Tuple2<Integer, Integer>> parseToArrayRepresentation(Path path, IndentSpec indentSpec, List<String> lines)
       throws BranchLayoutException {
 
-    List<String> linesWithoutBlank = lines.reject(line -> line.trim().isEmpty());
+    List<String> linesWithoutBlank = lines.reject(String::isBlank);
 
     if (linesWithoutBlank.nonEmpty() && linesWithoutBlank.head().getIndentWidth(indentSpec.getIndentCharacter()) > 0) {
       int firstNonEmptyLineIndex = lines.indexOf(linesWithoutBlank.head());
@@ -124,7 +125,7 @@ public class BranchLayoutFileReader implements IBranchLayoutReader {
     int lineIndex = 0;
     for (int realLineNumber = 0; realLineNumber < lines.length(); ++realLineNumber) {
       String line = lines.get(realLineNumber);
-      if (line.trim().isEmpty()) {
+      if (line.isBlank()) {
         // Can't use lambda because `realLineNumber` is not effectively final
         LOG.debug("Line no ${realLineNumber + 1} is blank. Skipping");
         continue;
